[package]
name = "eve"
version = "0.1.0"
authors = ["GiyoMoon <giyomoon@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
dotenvy = "0.15.3"
env_logger = "0.9.0"
futures = "0.3.24"
log = "0.4.17"
thiserror = "1.0.34"
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "process"] }
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.2"
twilight-util = { version = "0.13.1", features = ["builder"] }
