[package]
name = "eve"
version = "1.0.0"
authors = ["GiyoMoon <giyomoon@gmail.com>"]
edition = "2021"
publish = false

[profile.release]
strip = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
twilight-gateway = "0.15"
twilight-http = "0.15"
twilight-model = "0.15"
astrolabe = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "process"]

[dependencies.twilight-util]
version = "0.15"
features = ["builder"]
